[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/textures/default_inventory_background.png" type="Texture" id=1]
[ext_resource path="res://ui/scenes/character_skill_tab.gd" type="Script" id=2]
[ext_resource path="res://ui/textures/tab_button_default_background.png" type="Texture" id=3]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxLine" id=6]
color = Color( 0, 0, 0, 0 )

[node name="CharacterSkillTab" type="Node2D"]
script = ExtResource( 2 )

[node name="Shadow" type="TextureRect" parent="."]
modulate = Color( 0.243137, 0.243137, 0.243137, 0.352941 )
margin_left = -63.0
margin_top = -59.0
margin_right = 113.0
margin_bottom = 53.0
rect_scale = Vector2( 0.72, 1.42 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow2" type="TextureRect" parent="."]
modulate = Color( 0.243137, 0.243137, 0.243137, 0.352941 )
margin_left = 61.0
margin_top = -55.0
margin_right = 92.0
margin_bottom = -2.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.309804, 0.243137, 0.372549, 1 )
margin_left = -61.0
margin_top = -58.0
margin_right = 115.0
margin_bottom = 54.0
rect_scale = Vector2( 0.7, 1.4 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 0.309804, 0.243137, 0.372549, 1 )
margin_left = 63.0
margin_top = -54.0
margin_right = 91.0
margin_bottom = -3.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = -60.0
margin_top = -58.0
margin_right = 62.0
margin_bottom = -42.0
custom_fonts/font = SubResource( 3 )
text = "Character Skills"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 65.0
margin_top = -51.0
margin_right = 125.0
margin_bottom = 61.0
rect_scale = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectSkillButtons" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_right = 60.0
margin_bottom = 68.0

[node name="SelectSkillSlot1Button" type="TextureButton" parent="VBoxContainer/SelectSkillButtons"]
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SelectSkillButtons/SelectSkillSlot1Button"]
margin_left = 14.0
margin_top = 2.0
margin_right = 81.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 5 )
text = "-> S1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectSkillSlot2Button" type="TextureButton" parent="VBoxContainer/SelectSkillButtons"]
margin_top = 24.0
margin_right = 60.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 20 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SelectSkillButtons/SelectSkillSlot2Button"]
margin_left = 14.0
margin_top = 2.0
margin_right = 81.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 5 )
text = "-> S2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectSkillSlot3Button" type="TextureButton" parent="VBoxContainer/SelectSkillButtons"]
margin_top = 48.0
margin_right = 60.0
margin_bottom = 68.0
rect_min_size = Vector2( 60, 20 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/SelectSkillButtons/SelectSkillSlot3Button"]
margin_left = 14.0
margin_top = 2.0
margin_right = 81.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 5 )
text = "-> S3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveAllSkillSlotsButton" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 60.0
margin_bottom = 40.0

[node name="RemoveAllSkillSlotsButton" type="TextureButton" parent="VBoxContainer/RemoveAllSkillSlotsButton"]
margin_right = 60.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 40 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/RemoveAllSkillSlotsButton/RemoveAllSkillSlotsButton"]
margin_left = 10.0
margin_top = 5.5
margin_right = 77.0
margin_bottom = 34.5
custom_fonts/font = SubResource( 5 )
text = "Remove
AllSkills"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = -54.0
margin_top = -32.0
margin_right = 162.0
margin_bottom = 108.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_right = 216.0
margin_bottom = 13.0
rect_min_size = Vector2( 0, 13 )

[node name="AvailableSkillPoint" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
margin_right = 216.0
margin_bottom = 13.0
size_flags_horizontal = 3
alignment = 2

[node name="AvailableSkillPointText" type="Label" parent="VBoxContainer2/VBoxContainer/AvailableSkillPoint"]
margin_left = 91.0
margin_right = 200.0
margin_bottom = 13.0
custom_colors/font_color = Color( 1, 0.968627, 0.803922, 1 )
custom_fonts/font = SubResource( 4 )
text = "Available skill points:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvailableSkillPointValue" type="Label" parent="VBoxContainer2/VBoxContainer/AvailableSkillPoint"]
margin_left = 204.0
margin_right = 216.0
margin_bottom = 13.0
custom_colors/font_color = Color( 1, 0.968627, 0.803922, 1 )
custom_fonts/font = SubResource( 4 )
text = "00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillGridSlot" type="GridContainer" parent="VBoxContainer2"]
margin_top = 17.0
margin_right = 216.0
margin_bottom = 217.0
rect_min_size = Vector2( 0, 200 )
custom_constants/vseparation = 35
columns = 4

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 221.0
margin_right = 216.0
margin_bottom = 221.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="HBoxContainer" parent="VBoxContainer2/Buttons"]

[node name="CancelButton" type="TextureButton" parent="VBoxContainer2/Buttons/Cancel"]
visible = false
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label2" type="Label" parent="VBoxContainer2/Buttons/Cancel/CancelButton"]
margin_left = 14.0
margin_top = 2.0
margin_right = 81.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 5 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OKButton" type="TextureButton" parent="VBoxContainer2/Buttons/Cancel"]
visible = false
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label2" type="Label" parent="VBoxContainer2/Buttons/Cancel/OKButton"]
margin_left = 24.0
margin_top = 2.0
margin_right = 91.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 5 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="VBoxContainer2/Buttons"]
visible = false
margin_left = 168.0
margin_right = 172.0
margin_bottom = 64.0
custom_styles/separator = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/Buttons"]
margin_left = 4.0
margin_right = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
